# Vaccum-Cleaner

./: README.md  build_all.sh
206510398_208278945_A/: CMakeLists.txt
206510398_208278945_A/headers/: AlgoA_206510398_208278945.h
206510398_208278945_A/src/: AlgoA_206510398_208278945.cpp
206510398_208278945_B/: CMakeLists.txt
206510398_208278945_B/headers/: AlgoB_206510398_208278945.h  AlgorithmRegistration.h
206510398_208278945_B/src/: AlgoB_206510398_208278945.cpp
Documentation/: Advanced Topics - Assignment 3.docx
Simulation/: Part.py  Simulation.py
Simulator/: CMakeLists.txt  main.cpp
Simulator/headers/: BatteryMeter.h  DirtSensor.h  Simulator.h  WallsSensor.h
Simulator/src/: Simulator.cpp
common/headers/: AlgorithmRegistrar.h  Utils.h
common/src/: Utils.cpp
configs/: AlgoB_206510398_208278945.config  Simulator.config
houses/: input_b.house  input_c.house
